# Dynamo

./: .gitignore  README.md
DynamoBOT/: CMakeLists.txt
DynamoBOT/config/profiles/: default.json
DynamoBOT/src/bot/: bot.hpp  bot_config.hpp  bot_controller.hpp  collect_module.hpp  collection_helpers.hpp  combat_module.hpp  map_graph.hpp  module.hpp  movement_controller.hpp  navigation.hpp  roaming_module.hpp  safety_module.hpp  scheduler.hpp  threat_tracker.hpp  travel_module.hpp
DynamoBOT/src/bot/core/: bot.hpp  bot_config.hpp  bot_controller.hpp  module.hpp  scheduler.hpp
DynamoBOT/src/bot/modules/: collect_module.hpp  combat_module.hpp  roaming_module.hpp  safety_module.hpp  travel_module.hpp
DynamoBOT/src/bot/modules/combat/: core.inl  members.inl  movement.inl  public.inl  state_handlers.inl  targeting.inl  types.inl
DynamoBOT/src/bot/modules/safety/: anchors.inl  core.inl  members.inl  public.inl  state_handlers.inl  types.inl
DynamoBOT/src/bot/resources/: resource_planner.cpp  resource_planner.hpp
DynamoBOT/src/bot/support/: collection_helpers.hpp  movement_controller.hpp  npc_database.hpp  threat_tracker.hpp
DynamoBOT/src/config/: bot_profile.hpp  config_service.cpp  config_service.hpp
DynamoBOT/src/core/: config.cpp  config.hpp
DynamoBOT/src/game/: action_queue.hpp  actions.hpp  entities.hpp  game.hpp  game_engine.cpp  game_engine.hpp  hero.hpp  map.hpp  resource_state.hpp
DynamoBOT/src/host/: backend_host.cpp  backend_host.hpp  ipc_pipe_server.cpp  ipc_protocol.hpp  main.cpp
DynamoBOT/src/host/app/: main.cpp
DynamoBOT/src/host/core/: backend_host.cpp  backend_host.hpp  backend_snapshots.hpp
DynamoBOT/src/host/ipc/: ipc_pipe_server.hpp
DynamoBOT/src/network/: http_client.cpp  kryo_client.cpp  kryo_client.hpp  kryo_serializer.cpp  kryo_serializer.hpp  packet_registry.cpp  packet_registry.hpp
DynamoBOT/src/network/clients/: http_client.hpp  kryo_client.cpp
DynamoBOT/src/network/registry/: packet_registry.cpp
DynamoBOT/src/packets/: action_packets.hpp  api_packets.cpp  api_packets.hpp  auth_packets.cpp  auth_packets.hpp  extra_packets.hpp  game_packets.hpp  map_packets.hpp  packets.hpp
DynamoGUI/: App.axaml  App.axaml.cs  DynamoGUI.csproj  Program.cs  README.md  ViewLocator.cs  app.manifest
DynamoGUI/Controls/: PercentWidthConverter.cs  TacticalMapAssets.cs  TacticalMapView.cs
DynamoGUI/Models/: BackendModels.cs  JsonDefaults.cs  ProfileCatalog.cs  ProfileModels.cs  ServerEntry.cs
DynamoGUI/Services/: AppSession.cs  BackendService.cs  IpcClient.cs  WarUniverseApiClient.cs
DynamoGUI/Styles/: AppTheme.axaml
DynamoGUI/ViewModels/: LoginViewModel.cs  MainViewModel.cs  ProfileEditorViewModel.cs  StatsViewModels.cs  ViewModelBase.cs
DynamoGUI/Views/: LoginWindow.axaml  LoginWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  ProfileEditorView.axaml  ProfileEditorView.axaml.cs
